Siva, Vinisha | MOBN-1266 | OT Calendar: Disable expand-collapse button on surigical appointment and fix the height

--- a/ui/app/styles/ot/_otWeeklyCalendar.scss
+++ b/ui/app/styles/ot/_otWeeklyCalendar.scss
@@ -57,7 +57,7 @@
     &.expanded {
       z-index: 1;
     }
-    button {
+    i {
       position: absolute;
       right: 5px;
       top: 5px;
